# CompiladoresProyectoFinal

./: .gitignore  CMakeLists.txt  README.md  compilador  correc.s  correccion.s  ejemplo1  ejemplo1.s  ejemplo1.txt  ejemplo2.txt  environment.h  expression.cpp  expression.h  gencode.cpp  gramatica.tex  main  main.cpp  main.py  make.py  parser.cpp  parser.h  scanner.cpp  sol.s  token.cpp  token.h  visitor.cpp  visitor.h
asm_outputs/: test1declvar.s  test1expr.s  test1func.s  test1punteros.s  test1sentselect.s  test1struct.s  test2declvar.s  test2expr.s  test2func.s  test2punteros.s  test2sentselect.s  test2struct.s  test3declvar.s  test3expr.s  test3func.s  test3punteros.s  test3sentselect.s  test3struct.s  test4expr.s  test4punteros.s  test4sentselect.s  test4struct.s  test5punteros.s  test5sentselect.s  test5struct.s  test6sentselect.s
backend/: frontend.html  main.py  run.sh  test_client.py
generadosS/: test1declvar.s  test1expr.s  test1func.s  test1punteros.s  test1sentselect.s  test1struct.s  test2declvar.s  test2expr.s  test2func.s  test2punteros.s  test2sentselect.s  test2struct.s  test3declvar.s  test3expr.s  test3func.s  test3punteros.s  test3sentselect.s  test3struct.s  test4expr.s  test4punteros.s  test4sentselect.s  test4struct.s  test5punteros.s  test5sentselect.s  test5struct.s  test6sentselect.s
outputs/: test1declvar.txt  test1expr.txt  test1func.txt  test1punteros.txt  test1sentselect.txt  test1struct.txt  test2declvar.txt  test2expr.txt  test2func.txt  test2punteros.txt  test2sentselect.txt  test2struct.txt  test3declvar.txt  test3expr.txt  (+11 more)
(+66 files in other folders)
